--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Hrishikesh Sarma",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "json2xls": "^0.1.2",
     "simple-excel-to-json": "^2.3.0"
   }
