--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Reads data from excel file",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "Excel",
@@ -16,5 +17,8 @@
     "express": "^4.18.2",
     "json2xls": "^0.1.2",
     "simple-excel-to-json": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
